| Bug #41362 | LogHandler opens the logfile twice causing resouce leak | ||
|---|---|---|---|
| Submitted: | 10 Dec 2008 16:39 | Modified: | 10 Dec 2008 23:05 |
| Reporter: | Magnus Blåudd | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S2 (Serious) |
| Version: | 6.3-.20 | OS: | Any |
| Assigned to: | Magnus Blåudd | CPU Architecture: | Any |
[10 Dec 2008 16:39]
Magnus Blåudd
[10 Dec 2008 17:46]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/61259 2789 Magnus Svensson 2008-12-10 BUG#41362 LogHandler opens the logfile twice causing resouce leak
[10 Dec 2008 17:57]
Bugs System
Pushed into 5.1.30-ndb-6.3.20 (revid:msvensson@mysql.com-20081210174607-ex1za51nuhq7eei6) (version source revid:msvensson@mysql.com-20081210174607-ex1za51nuhq7eei6) (pib:5)
[10 Dec 2008 17:58]
Bugs System
Pushed into 5.1.30-ndb-6.4.0 (revid:msvensson@mysql.com-20081210174607-ex1za51nuhq7eei6) (version source revid:msvensson@mysql.com-20081210175510-c1y9fxz3vqluqkv6) (pib:5)
[10 Dec 2008 23:05]
Jon Stephens
Documented in the NDB-6.3.20 changelog as follows:
Cluster log files were opened twice by internal log-handling code,
resulting in a resource leak.
[10 Dec 2008 23:10]
Jon Stephens
Fix actually went into NDB-6.3.21 - updated changelog entry accordingly.
