BUG#41362 LogHandler opens the logfile twice causing resouce leak