storage/ndb/include/logger/FileLogHandler.hpp
@@ -69,6 +69,8 @@ public:
   virtual bool open();
   virtual bool close();
 
+  virtual bool is_open();
+
   virtual bool setParam(const BaseString &param, const BaseString &value);
   virtual bool checkParams();
   
